fix address alignment

--- a/assets/sass/theme/components/_sale.sass
+++ b/assets/sass/theme/components/_sale.sass
@@ -15,9 +15,9 @@
         @include margin-top($spacer)
         p
             margin-bottom: 0
-        address
-            font-size: $small-font-size
-    
+    address
+        align-items: flex-start
+        font-size: $small-font-size
     .direction
         &:hover
             text-decoration: underline
